--- a/RISC1.qsf
+++ b/RISC1.qsf
@@ -46,7 +46,9 @@ set_global_assignment -name LAST_QUARTUS_VERSION 15.1.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name VHDL_FILE DataPath.vhd
 set_global_assignment -name VHDL_FILE datapathComponents.vhd
 set_global_assignment -name VHDL_FILE regFile.vhd
 set_global_assignment -name VHDL_FILE dataRegister.vhd
 set_global_assignment -name VHDL_FILE alu.vhd
+set_global_assignment -name VHDL_FILE memory.vhd
